fixed frontend for the moment

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,5 +2,5 @@ FROM node:16
 
 WORKDIR /frontend
 COPY ./package*.json /frontend/
-RUN npm install
+RUN npm install && chmod 777 /frontend/node_modules/
 ENTRYPOINT ["npm", "start"]
